--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,14 +6,14 @@ $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
-$header-heading-color: #fff !default;
-$header-bg-color: #f39c12;
-$header-bg-color-secondary: #e67e22;
+$header-heading-color: #fff ;
+$header-bg-color: #9b0000;
+$header-bg-color-secondary:#dadfe1;
 
 // Text
-$section-headings-color: #D35400;
+$section-headings-color:#9b0000;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #0479a8;
 $blockquote-text-color: #819198 !default;
 
 // Code
