--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff ;
-$header-bg-color: #9b0000;
-$header-bg-color-secondary:#dadfe1;
+$header-bg-color-secondary: #9b0000;
+$header-bg-color:#646569;
 
 // Text
 $section-headings-color:#9b0000;
