--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@ $header-bg-color:#646569;
 $section-headings-color:#9b0000;
 $body-text-color: #606c71 !default;
 $body-link-color: #0479a8;
+$body-link-color-hover: #a4dcde;
 $blockquote-text-color: #819198 !default;
 
 // Code
