--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -183,7 +183,7 @@ a {
     padding: 2rem 1rem;
     font-size: 1rem;
   }
-  
+
   kbd {
     background-color: #fafbfc;
     border: 1px solid #c6cbd1;
@@ -311,18 +311,29 @@ a {
     display: block;
     width: 100%;
     overflow: auto;
+    border-collapse:collapse;
     word-break: normal;
     word-break: keep-all; // For Firefox to horizontally scroll wider tables.
     -webkit-overflow-scrolling: touch;
 
     th {
       font-weight: bold;
+      background: #adadad;
+      color: #fff;
     }
 
     th,
     td {
       padding: 0.5rem 1rem;
       border: 1px solid $table-border-color;
+    }
+    tr {
+      background-color: #dadfe1;
+      border-top: 1px solid darken(#f9f9f9, 4%);
+
+      &:nth-child(2n) {
+        background-color: #f9f9f9;
+      }
     }
   }
 
