--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,7 +23,7 @@ $code-text-color: #567482 !default;
 
 // Borders
 $border-color: #dce6f0 !default;
-$table-border-color: #e9ebec !default;
+$table-border-color: #777778;
 $hr-border-color: #eff0f1 !default;
 
 @import "{{ site.theme }}";
