--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
-        <span class="site-footer-credits">This event is organized by the Geology Graduate Student Association (GGSA) in the <a href="http://geoscience.wisc.edu/geoscience/">Department of Geoscience</a>, University of Wisconsin-Madison<br>Website built by Shan Ye</span>
+        <span class="site-footer-credits">This event is organized by the Geology Graduate Student Association (GGSA) <br> in the <a href="http://geoscience.wisc.edu/geoscience/">Department of Geoscience</a>, University of Wisconsin-Madison<br>Website built by Shan Ye</span>
       </footer>
     </main>
   </body>
