--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         <a href="https://wisc-geo-symposium21.github.io/" class="btn">Gateway</a>
         <a href="https://wisc-geo-symposium21.github.io/pages/oral/oral_index" class="btn">Oral</a>
         <a href="https://wisc-geo-symposium21.github.io/pages/poster/poster_index" class="btn">Posters</a>
-        <a href="https://wisc-geo-symposium21.github.io/pages/elevator_pitch/elevator_pitch_index" class="btn">Lightenings</a>
+        <a href="https://wisc-geo-symposium21.github.io/pages/elevator_pitch/elevator_pitch_index" class="btn">Pitches</a>
       {% endif %}
     </header>
 
